--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -435,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = marker_six\n"
+    "la_boca_marker = None"
    ]
   },
   {
