--- a/index.ipynb
+++ b/index.ipynb
@@ -435,11 +435,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f936ea8d710>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca_marker = marker_six\n"
+    "la_boca_marker = marker_six\n",
+    "la_boca_marker"
    ]
   },
   {
